{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 40,
  "lineage": "4352452f-766b-6a43-7730-801dcb3cbcca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:internet-gateway/igw-09de20478bb508e77",
            "id": "igw-09de20478bb508e77",
            "owner_id": "061051260889",
            "tags": {
              "Name": "dove-IGW"
            },
            "tags_all": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:route-table/rtb-0ff3880cd4d7e14f6",
            "id": "rtb-0ff3880cd4d7e14f6",
            "owner_id": "061051260889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09de20478bb508e77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dove-pub-RT"
            },
            "tags_all": {
              "Name": "dove-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f648c736048106da",
            "route_table_id": "rtb-0ff3880cd4d7e14f6",
            "subnet_id": "subnet-0e1d76dfb9f0167dd"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec81c5a40faecb8c",
            "route_table_id": "rtb-0ff3880cd4d7e14f6",
            "subnet_id": "subnet-0990f414c4a768bbe"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084232a6244cfed71",
            "route_table_id": "rtb-0ff3880cd4d7e14f6",
            "subnet_id": "subnet-0ffc5a9e88072a368"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:security-group/sg-0ead786ffe9c144ec",
            "description": "Sec Grp for dove ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ead786ffe9c144ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "110.235.227.102/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-stack-sg",
            "name_prefix": "",
            "owner_id": "061051260889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-0e1d76dfb9f0167dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1d76dfb9f0167dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-1"
            },
            "tags_all": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-0990f414c4a768bbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0990f414c4a768bbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-2"
            },
            "tags_all": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-0ffc5a9e88072a368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc5a9e88072a368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-3"
            },
            "tags_all": {
              "Name": "dove-pub-3"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-06284f58bd884e009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06284f58bd884e009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pvt-1"
            },
            "tags_all": {
              "Name": "dove-pvt-1"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-0d39c78bda2f6ed1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d39c78bda2f6ed1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pvt-2"
            },
            "tags_all": {
              "Name": "dove-pvt-2"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pvt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:subnet/subnet-02f989ca8dcbbb55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f989ca8dcbbb55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pvt-3"
            },
            "tags_all": {
              "Name": "dove-pvt-3"
            },
            "vpc_id": "vpc-072acd6fbee3dd717"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061051260889:vpc/vpc-072acd6fbee3dd717",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d459f5d673446af4",
            "default_route_table_id": "rtb-0b74b5a828e9e58bc",
            "default_security_group_id": "sg-0b873f0ad8895ebd9",
            "dhcp_options_id": "dopt-096ddd366943367fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072acd6fbee3dd717",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b74b5a828e9e58bc",
            "owner_id": "061051260889",
            "tags": {
              "Name": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile"
            }
          }
        }
      ]
    }
  ]
}